All tasks worked